Fixed form spacing on blog page. :rocket:

--- a/styles/sass/_blogArticle4.scss
+++ b/styles/sass/_blogArticle4.scss
@@ -10,6 +10,7 @@
 
 .bA4MContainer {
     @include flexIt(column);
+    padding-bottom: 100px;
 }
 
 .bA4MContainer div {
@@ -37,7 +38,7 @@
 }
 
 .blogForm {
-    padding-top: 100px;
+    margin-top: 100px;
 }
 
 .blogForm fieldset {
