--- a/styles/style.css
+++ b/styles/style.css
@@ -847,6 +847,7 @@ footer p {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  padding-bottom: 100px;
 }
 
 .bA4MContainer div {
@@ -883,7 +884,7 @@ footer p {
 }
 
 .blogForm {
-  padding-top: 100px;
+  margin-top: 100px;
 }
 
 .blogForm fieldset {
